.github/lean_quality/fixtures/research_legacy_refs/negative/public/Formal/AG/Research/Basic.lean
def researchPublic : Nat := 0
